--- a/css/estilos.css
+++ b/css/estilos.css
@@ -10,49 +10,41 @@
     background-size:auto 100vh;
    font-family: 'Raleway', sans-serif;
     height:100vh;
-    font-size: 18px; 
+    font-size: 12px; 
   }
   /* se a tela tiver pelo menos 400px vai carregar estes estilos */  
   @media(min-width: 400px) {
    body{
     font-size: 14px;
    }
-  }
-
- 
+  } 
+  /* breakpoint */
   @media(min-widt:600px){
     body{
       font-size: 18px;
     }
   }
-
-
+  /* breakpoint */
   @media (min-widht:1200px){
     body{
       font-size:20px
-    }
-      
-  }
-    
+    }      
+  }    
   header{
     height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-  }
-  
+  }  
   .menu{
     background-color: whitesmoke;
     position: fixed;
     width: 100vw;
-    top:0px;
-  
-  }
-  
+    top:0px;  
+  }  
   .menu ul{
     display:flex;
-    justify-content:space-around;
-  
+    justify-content:space-around;  
   }
   .menu li{
     list-style:none;
@@ -60,75 +52,104 @@
   
   .menu a{
     display: block; 
-    padding: 10px 20px;
-  
+    padding: 10px 20px; 
+    transition: background-color 1s, color 1s; 
   }
+  .menu a:active,
+  .menu a:hover{
+    background-color: teal;
+    color: white
+  }
+  
   a{
     color:teal;
     text-decoration:none;
-  }
-  
+  }  
   a:hover{
     text-decoration:underline;
+  }  
+  .titulo{
+    transform: scale(0.2) translateY(50vh);
+    opacity: 0;
+    animation: 1s ease 2s animacaoTitulo forwards;
   }
-  
+  @keyframes animacaoTitulo{
+    from{
+      transform: scale(0.2); translateY(50vh)
+      opacity:0;
+    }
+    to{
+      transform: scale(1); translateY(0)
+      opacity: 1;
+    }
+  }
   .site-subtitle
   .site-title{
     color:whitesmoke;
-    text-align:center;
-   
+    text-align:center;   
   }
   .site-title{
     font-size: 4em;
     font-family: 'Permanent Marker', cursive; 
-  }
-    
+  }    
   .site-subtitle{
     font-style:italic;
     font-family: 'Permanent Marker', cursive;
     line-height: 2.0em;
-  }
+  }   
+ 
+  .contato,
   .portfolio{
     padding: 2em;
-    height: 100vh;
-  }
-  
+    min-width: 100vh;
+  }  
+  .contato h2,
   .portfolio h2{
     font-family: 'Shadows Into Light', cursive;
     color: whitesmoke;
     margin-bottom: 1,5em;
     font-size: 2em;
-    }
-    
+    }    
     .portfolio .grid{
         display:grid;
         gap:2em;         
     }
-
     @media(min-width:560px){
         .portfolio .grid{
             grid-template-columns:240px 240px;    
-        }
-           
+        }           
     }
-
     @media(min-width:880px){
         .portfolio .grid{
             grid-template-columns:repeat(3,260px); 
             align-content: center;
             justify-content: center;
             height: calc(100vh - 8em - 48px);  
-
-        }
-           
-    }   
-   
+        }           
+    }     
     .portfolio figure{
         text-align: center;
     }
   .img-portfolio{
     height:170px;
-    width:170px;
+    width:240px;
     object-fit: cover;
     object-position: left bottom;
+    transition: transform 500ms;
+  }
+  .img-portfolio:hover{
+    transform: scale(1.2); rotate: (-2deg);
+  }
+  .contato .icons{
+    text-align: center;
+  }
+  .contato a{
+    color: whitesmoke;
+    font-size: 4em;
+    transition: text-shadow 1s;
+  }
+  .contato a:active,
+  .contato a:hover {
+    text-decoration: none;
+    text-shadow: 0px 0px 10px rgba(255,255,255,.5);
   }
